ash: Should use GetTargetBounds to check call of SetBoundsDirectAnimated

Changes:
Because window's layer might be doing animation, in default_state.cc we should use GetTargetBounds to check call of SetBoundsDirectAnimated, otherwise it might miss the required bounds update in the case of 673803.

BUG=673803
TEST=emulator test; also add test coverage.

Review-Url: https://codereview.chromium.org/2589793002
Cr-Commit-Position: refs/heads/master@{#439992}

Former-commit-id: 962f4ece9b5b3efa7e2cc3f0dde56cd08d9ad176